Dragging dependencies now have a background for visibility and their source elements now span edge to edge the list item containing them resolving dragging issues.

--- a/client/app.css
+++ b/client/app.css
@@ -89,6 +89,7 @@
 	
 	
 	aside {
+		user-select: none;
 		z-index:99;
 		box-shadow: 0 1px 30px 15px #000;
 	  float: left;
@@ -306,7 +307,7 @@
 	#modules ul li
 	{
 		border-bottom:1px solid #DDD;
-		padding:18px 20px;
+/*		padding:18px 20px;*/
 		cursor:pointer;
 		position:relative;
 	}
@@ -361,6 +362,22 @@
 		font-size:13px;
 		letter-spacing:0px;
 		width:325px;
+	}
+
+	#modules li div
+	{
+		margin:0px;
+		padding:18px 20px;
+	}
+	
+	#modules li div.drag
+	{
+		background:#FFF;
+	}
+	
+	.item-wrapper.drag
+	{
+		background:#272822;
 	}
 	
 	#modules li span
@@ -512,7 +529,7 @@
 
 	div.artifact-overview span
 	{
-		
+		text-align: center;
 		background: rgb(65,66,61);
 		position: absolute;
 		right: 20px;
